docs: 단계별 노트 인덱스와 1·2단계 노트 갱신
- 진행 상황 표를 12단계 + 실전 팁까지 채운다.
- 실행 방법(vt 프로파일, --enable-preview), 시연 전용 엔드포인트,
  스레드 접두어 대조표, 단계별 응답 시간/톰캣 점유 실측표를 추가한다.
- 2단계에 적어둔 "코드가 답하지 못하는 것들" 여섯 항목에 각각 어느 단계에서
  닫히는지 링크를 건다. 이 목록이 발표 전체의 뼈대라서 앞뒤를 이어둔다.
- 로그 샘플을 새 포맷(P/V 마커)으로 맞춘다.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>